tests/ui/consts/too_generic_eval_ice.stderr
error: constant expression depends on a generic parameter
  --> $DIR/too_generic_eval_ice.rs:7:13
   |
LL |         [5; Self::HOST_SIZE] == [6; 0]
   |             ^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 1 previous error

